fix: approving on firefox

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -65,6 +65,21 @@ body {
   top: 0;
 }
 
+.growing-text-list{
+  a {
+    color: inherit;
+    text-decoration-line: inherit;
+  }
+  .mdc-list-item__text{
+    flex-grow: 1;
+  }
+
+  .mdc-list-item__meta{
+    margin-left: 0px;
+  }
+}
+
+
 // Fix black hover over list item with checkbox (on Chrome 74+)
 :not(.mdc-list--non-interactive) > :not(.mdc-list-item--disabled).mdc-list-item::before {
     filter: opacity(100%);
